--- a/app/src/main/res/layout/item_with_text.xml
+++ b/app/src/main/res/layout/item_with_text.xml
@@ -24,11 +24,11 @@
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="@dimen/movie_card_text_width"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/material_margin_super_small"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:maxLines="1"
         android:textColor="@color/white"
         android:textSize="12sp"
         tools:text="Мир дикого запада"
@@ -39,9 +39,10 @@
         style="@style/Base.Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:isIndicator="true"
         android:numStars="5"
         android:progressBackgroundTint="@color/colorControlNormal"
         android:stepSize="0.5"
-        tools:rating="5" />
+        tools:rating="3.3" />
 </LinearLayout>
