--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,13 +8,12 @@
 
     <!-- Avatar -->
     <dimen name="avatar_size">120dp</dimen>
+    <dimen name="actor_icon_size">90dp</dimen>
+
 
     <!-- Movie Card Item -->
     <dimen name="movie_card_width">130dp</dimen>
     <dimen name="movie_card_height">170dp</dimen>
     <dimen name="movie_card_text_width">96dp</dimen>
     <dimen name="close_width">20dp</dimen>
-
-
-
 </resources>
