--- a/app/src/main/res/layout/item_actor_with_text.xml
+++ b/app/src/main/res/layout/item_actor_with_text.xml
@@ -13,7 +13,7 @@
     tools:ignore="RtlHardcoded">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/image_preview"
+        android:id="@+id/actor_image_preview"
         android:layout_width="@dimen/actor_icon_size"
         android:layout_height="@dimen/actor_icon_size"
         android:scaleType="centerCrop"
@@ -22,12 +22,13 @@
         tools:src="@drawable/ic_avatar" />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/actor_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/material_margin_super_small"
         android:ellipsize="end"
         android:lines="2"
+        android:gravity="center"
         android:textColor="@color/white"
         android:textSize="12sp"
         tools:text="Леонардо Ди Каприо"
