--- a/app/src/main/res/layout/item_card_actors.xml
+++ b/app/src/main/res/layout/item_card_actors.xml
@@ -42,16 +42,17 @@
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/items_container"
+        android:id="@+id/actors_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="@dimen/material_margin_normal"
         android:layout_marginEnd="12dp"
+        android:layout_marginBottom="@dimen/material_margin_small"
         android:orientation="horizontal"
         android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:ignore="RtlSymmetry"
-        tools:itemCount="4"
-        tools:listitem="@layout/item_with_text" />
+        tools:itemCount="5"
+        tools:listitem="@layout/item_actor_with_text" />
 </LinearLayout>
