--- a/app/src/main/res/layout/item_actor_with_text.xml
+++ b/app/src/main/res/layout/item_actor_with_text.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="@dimen/material_margin_super_small"
         android:ellipsize="end"
         android:lines="2"
-        android:gravity="center"
+        android:gravity="center|top"
         android:textColor="@color/white"
         android:textSize="12sp"
         tools:text="Леонардо Ди Каприо"
