--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,9 @@
     <dimen name="image_preview_height">120dp</dimen>
     <dimen name="image_preview_width">75dp</dimen>
 
+    <dimen name="backdrop_height">220dp</dimen>
+    <dimen name="collapsing_toolbar_min_height">100dp</dimen>
+
     <!-- Avatar -->
     <dimen name="avatar_size">120dp</dimen>
     <dimen name="actor_icon_size">70dp</dimen>
