Added dao and entities and done some refactoring.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,7 +5,7 @@
     app:startDestination="@+id/home_dest">
     <fragment
         android:id="@+id/home_dest"
-        android:name="com.af2905.beawareofmovies.ui.feed.FeedFragment"
+        android:name="com.af2905.beawareofmovies.presentation.feed.FeedFragment"
         android:label="@string/home"
         tools:layout="@layout/feed_fragment">
 
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/flow_step_one_dest"
-        android:name="com.af2905.beawareofmovies.ui.movie_details.MovieDetailsFragment"
+        android:name="com.af2905.beawareofmovies.presentation.movie_details.MovieDetailsFragment"
         tools:layout="@layout/movie_details_fragment">
         <argument
             android:name="flowStepNumber"
@@ -27,7 +27,7 @@
 
     <fragment
         android:id="@+id/flow_step_two_dest"
-        android:name="com.af2905.beawareofmovies.ui.movie_details.MovieDetailsFragment"
+        android:name="com.af2905.beawareofmovies.presentation.movie_details.MovieDetailsFragment"
         tools:layout="@layout/movie_details_fragment">
 
         <argument
@@ -42,7 +42,7 @@
 
     <fragment
         android:id="@+id/tv_shows_dest"
-        android:name="com.af2905.beawareofmovies.ui.tvshows.TvShowsFragment"
+        android:name="com.af2905.beawareofmovies.presentation.tvshows.TvShowsFragment"
         android:label="@string/tv_show"
         tools:layout="@layout/tv_shows_fragment">
 
@@ -52,17 +52,17 @@
     </fragment>
     <fragment
         android:id="@+id/movie_details_fragment"
-        android:name="com.af2905.beawareofmovies.ui.movie_details.MovieDetailsFragment"
+        android:name="com.af2905.beawareofmovies.presentation.movie_details.MovieDetailsFragment"
         android:label="details_fragment"
         tools:layout="@layout/movie_details_fragment" />
     <fragment
         android:id="@+id/profile_fragment"
-        android:name="com.af2905.beawareofmovies.ui.profile.ProfileFragment"
+        android:name="com.af2905.beawareofmovies.presentation.profile.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/search_dest"
-        android:name="com.af2905.beawareofmovies.ui.search.SearchFragment"
+        android:name="com.af2905.beawareofmovies.presentation.search.SearchFragment"
         android:label="SearchFragment"
         tools:layout="@layout/fragment_search" />
 </navigation>
