--- a/app/src/main/res/layout/tv_shows_fragment.xml
+++ b/app/src/main/res/layout/tv_shows_fragment.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.af2905.beawareofmovies.ui.tvshows.TvShowsFragment">
+    tools:context="com.af2905.beawareofmovies.presentation.tvshows.TvShowsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
